# neurorecovery

./: .gitignore  README.md  TODO  Tiltfile  custom_image_registry.md  package-lock.json  package.json  reg.yaml
NeuroRecovery/: build.gradle  google-services.json  settings.gradle
NeuroRecovery/app/: build.gradle
backend/: Cargo.toml  Dockerfile
backend/neurorecovery-backend-chart/: Chart.yaml
backend/neurorecovery-backend-chart/templates/: NOTES.txt  _helpers.tpl  balancer.yaml  deployment.yaml
backend/src/: main.rs  routes.rs
backend/src/routes/: data.rs  email.rs  utils.rs
cicd/: backend_chart_values.yaml  frontend_chart_values.yaml  mongodb_values.yaml  namespace.yaml
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/neurorecovery-frontend-chart/: Chart.yaml
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  (+4 more)
matlab_local_server/: add.m  launch_matlab.py  runner.m  server.py
matlab_python_server/: README.md  basic.m  requirements.txt  runner.m  server.py  spyder_ecg_plot.py
rdp_matlab_local_server/: launch_rdp_matlab.py  server.py
report/: .~lock.Comp Sci-IT-AI Report Template AY 22-23.docx#  .~lock.neurorecovery_final_presentation.pptx#  .~lock.neurorecovery_presentation.pptx#  .~lock.neurorecovery_progress_presentation.pptx#  .~lock.presentation.odp#  .~lock.report_neurorecovery_template.docx#  misc.md  neurorecovery_final_presentation.pptx  neurorecovery_progress_presentation.pptx  presentation.odp  report_neurorecovery.md  template_with_2_pages.odt
report/rand/: Comp Sci-IT-AI Report Template AY 22-23.docx  code_snippets.md  report_neurorecovery_template.docx
(+78 files in other folders)
