[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.2.1"
lazy_static = "1.4.0"
http = "0.2.7"
clap = { version = "3.1.8", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["cors"] }
futures = "0.3.24"
url = "2.3.1"
dotenv = "0.15.0"
reqwest = "0.11.12"
email_address = "0.2.4"
argon_hash_password = "0.1.0"
rusoto_ses = "0.48.0"
rusoto_core = "0.48.0"

[dev-dependencies]
ctor = "0.1.22"
serial_test = "0.8.0"
axum-test-helper = "0.1.1"
